--- a/src/main/resources/convertergui.fxml
+++ b/src/main/resources/convertergui.fxml
@@ -11,12 +11,12 @@
          <children>
             <HBox VBox.vgrow="NEVER">
                <children>
-                  <TextField fx:id="pathField" editable="false" maxWidth="1.7976931348623157E308" promptText="Dateipfad" HBox.hgrow="ALWAYS" />
-                  <Button fx:id="bBrowse" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleBrowse" text="Durchsuchen" />
+                  <TextField fx:id="pathField" editable="false" maxWidth="1.7976931348623157E308" promptText="%ui.jffPath" HBox.hgrow="ALWAYS" />
+                  <Button fx:id="bBrowse" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleBrowse" text="%ui.browse" />
                </children>
             </HBox>
-            <Button fx:id="bConvert" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleConvert" text="In Skript konvertieren" />
-            <Label fx:id="errorLabel" text="Keine Datei ausgewählt!" textFill="RED" visible="false" VBox.vgrow="ALWAYS">
+            <Button fx:id="bConvert" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleConvert" text="%ui.convert" />
+            <Label fx:id="errorLabel" text="%error.noFile" textFill="RED" visible="false" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="16.0" />
                </font>
@@ -25,9 +25,9 @@
                </padding>
             </Label>
             <Pane prefWidth="400.0" VBox.vgrow="ALWAYS" />
-            <Button fx:id="bJFF" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSaveJFF" text="JFLAP-Automat speichern">
+            <Button fx:id="bJFF" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSaveJFF" text="%ui.saveJFLAP">
             </Button>
-            <Button fx:id="bSave" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSave" text="Skript speichern" />
+            <Button fx:id="bSave" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSave" text="%ui.saveScript" />
          </children>
       </VBox>
        <TextArea fx:id="outArea" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" />
