--- a/src/main/resources/convertergui.fxml
+++ b/src/main/resources/convertergui.fxml
@@ -5,31 +5,34 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.antifuse.jftsjava.Controller">
-   <children>
-      <VBox>
-         <children>
-            <HBox VBox.vgrow="NEVER">
-               <children>
-                  <TextField fx:id="pathField" editable="false" maxWidth="1.7976931348623157E308" promptText="%ui.jffPath" HBox.hgrow="ALWAYS" />
-                  <Button fx:id="bBrowse" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleBrowse" text="%ui.browse" />
-               </children>
-            </HBox>
-            <Button fx:id="bConvert" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleConvert" text="%ui.convert" />
-            <Label fx:id="errorLabel" text="%error.noFile" textFill="RED" visible="false" VBox.vgrow="ALWAYS">
-               <font>
-                  <Font size="16.0" />
-               </font>
-               <padding>
-                  <Insets left="10.0" top="5.0" />
-               </padding>
-            </Label>
-            <Pane prefWidth="400.0" VBox.vgrow="ALWAYS" />
-            <Button fx:id="bJFF" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSaveJFF" text="%ui.saveJFLAP">
-            </Button>
-            <Button fx:id="bSave" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSave" text="%ui.saveScript" />
-         </children>
-      </VBox>
-       <TextArea fx:id="outArea" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" />
-   </children>
+<HBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="eu.antifuse.jftsjava.Controller">
+   <VBox>
+      <HBox VBox.vgrow="NEVER">
+         <TextField fx:id="pathField" editable="false" maxWidth="1.7976931348623157E308" promptText="%ui.jffPath"
+                    HBox.hgrow="ALWAYS"/>
+         <Button fx:id="bBrowse" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                 onAction="#handleBrowse" text="%ui.browse"/>
+      </HBox>
+      <Button fx:id="bConvert" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleConvert"
+              text="%ui.convert"/>
+      <Label fx:id="errorLabel" text="%error.noFile" textFill="RED" visible="false" VBox.vgrow="ALWAYS">
+         <font>
+            <Font size="16.0"/>
+         </font>
+         <padding>
+            <Insets left="10.0" top="5.0"/>
+         </padding>
+      </Label>
+      <Pane prefWidth="400.0" VBox.vgrow="ALWAYS"/>
+      <Button fx:id="bJFF" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSaveJFF"
+              text="%ui.saveJFLAP">
+      </Button>
+      <Button fx:id="bSave" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSave"
+              text="%ui.saveScript"/>
+      <Button layoutX="10.0" layoutY="360.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+              text="%ui.saveFLACI" onAction="#handleSaveFLACI"/>
+   </VBox>
+   <TextArea fx:id="outArea" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS"
+             VBox.vgrow="ALWAYS"/>
 </HBox>
